# walkthru

./: .gitignore  DECISIONS.md  PLAN.md  README.md  pyproject.toml
.claude/skills/using-walkthru/: SKILL.md
.claude/skills/walkthru-adapter/: SKILL.md
.claude/skills/walkthru-dev/: SKILL.md
.claude/skills/walkthru-schema/: SKILL.md
.github/workflows/: npm-ci-ts.yml
examples/: README.md  capture_demo.py  generative_demo.py  narration_demo.py
misc/docs/: WALKTHRU-AGENT-BRIEF.md  demo2reel-01-Tooling-Capability-Survey-A-Play-Commands-and-Record-a-Demo-System.md  demo2reel-02-The-Demo-Document-A-Data-Model-and-Open-Closed-Architecture-for-Editable-Demo-Tour-Artifacts.md
schema/: demo-document.schema.json
schema/fixtures/: full-demo.json  minimal-demo.json
tests/: builders.py  fakes.py  test_cosmosgl_executor.py  test_engine.py  test_examples.py  test_export.py  test_firewall.py  test_guardrails.py  test_mixing_synth.py  test_narration_assemble.py  test_narration_pace.py  test_narration_realize.py  test_pacing.py  test_playwright_adapter.py  test_reelee_target.py  test_schema.py  test_srt_export.py  test_timeline.py  test_walkthru.py
ts/: README.md  package-lock.json  package.json  tsconfig.json
ts/scripts/: codegen.mjs
ts/src/: index.test.ts  index.ts  schema.codegen.test.ts  schema.generated.ts  schema.roundtrip.test.ts
walkthru/: __init__.py
walkthru/adapters/: __init__.py
walkthru/adapters/export/: __init__.py  json_target.py  srt.py  webvtt.py
walkthru/adapters/playwright/: __init__.py  locator.py  recorder.py
walkthru/adapters/synth/: __init__.py  mixing_synth.py
walkthru/core/: __init__.py  engine.py  events.py  schema.py  timeline.py
walkthru/ecosystem/: __init__.py
walkthru/ecosystem/cosmosgl/: __init__.py  executor.py
walkthru/ecosystem/reelee/: __init__.py  render_target.py
walkthru/narration/: __init__.py  assemble.py  pace.py  realize.py
walkthru/observers/: __init__.py  pacing.py
walkthru/ports/: __init__.py
